--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -27,6 +27,6 @@ backend app-servers
     option forwardfor
     {% for host in groups['rhel75-group'] %}
       {% if 'rhtest' in hostvars[host].name %}
-        server server{{loop.index}} {{ hostvars[host].ansible_ssh_host }}:{{ http_port }} cookie {{ hostvars[host].ansible_ssh_host }} check
+        server server{{loop.index}} {{ hostvars[host].private_ip }}:{{ http_port }} cookie {{ hostvars[host].private_ip }} check
       {% endif %}
     {% endfor %}
