--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -25,8 +25,10 @@ backend app-servers
     mode http
     balance roundrobin
     option forwardfor
+    {% set srvindex = 1 %}
     {% for host in groups['rhel75-group'] %}
       {% if 'rhtest' in hostvars[host].name %}
-        server server{{loop.index}} {{ hostvars[host].private_ip }}:{{ http_port }} cookie {{ hostvars[host].private_ip }} check
+        {% set srvindex = srvindex + 1 %}
+        server server{{ srvindex }} {{ hostvars[host].private_ip }}:{{ http_port }} cookie {{ hostvars[host].private_ip }} check
       {% endif %}
     {% endfor %}
